--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,4 +8,32 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="padding16">
+        <item name="android:padding">16dp</item>
+    </style>
+    <style name="txt_17_medium_blue" parent="txt_17_medium">
+        <item name="android:textColor">@color/accentColor</item>
+    </style>
+    <style name="txt_17_medium" parent="txt_medium">
+        <item name="android:textSize">17sp</item>
+    </style>
+    <style name="txt_medium">
+        <item name="android:textStyle">bold</item>
+    </style>
+    <style name="dialogBtnStyle" parent="txt_14_medium_blue">
+        <item name="android:background">@drawable/gray_effect_without_border_rounded_corner</item>
+        <item name="android:padding">8dp</item>
+        <item name="android:gravity">center</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_width">wrap_content</item>
+    </style>
+    <style name="txt_14_medium_blue" parent="text_14_medium">
+        <item name="android:textColor">@color/accentColor</item>
+    </style>
+    <style name="text_14_medium" parent="txt_medium">
+        <item name="android:textSize">14sp</item>
+    </style>
+
+
+
 </resources>
