--- a/app/src/main/res/layout/activity_launch.xml
+++ b/app/src/main/res/layout/activity_launch.xml
@@ -5,6 +5,21 @@
     android:layout_height="match_parent"
     android:background="@drawable/launch"
     tools:context="com.dhisat.naveen.airtennisgame.LaunchActivity">
+
+    <LinearLayout
+        android:layout_marginTop="@dimen/margin50"
+        android:layout_centerHorizontal="true"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="AIR TENNIS "
+            android:textSize="35sp"
+            android:textStyle="bold"
+            android:textColor="@color/white"/>
+
+    </LinearLayout>
     <LinearLayout
         android:layout_marginTop="@dimen/margin140"
         android:layout_centerHorizontal="true"
@@ -13,31 +28,31 @@
         android:orientation="vertical">
         <TextView
             android:id="@+id/playBtn"
-            android:background="@color/colorPrimary"
+            android:background="@color/colorPrimaryDark"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Play"
+            android:text="PLAY"
             android:paddingLeft="@dimen/padding50"
             android:paddingRight="@dimen/padding20"
             android:paddingTop="@dimen/padding10"
             android:paddingBottom="@dimen/padding10"
-            android:textSize="20sp"
+            android:textSize="25sp"
             android:textStyle="bold"
-            android:textColor="@color/white_smoke"/>
+            android:textColor="@color/white"/>
         <TextView
             android:id="@+id/game_level"
+            android:background="@color/colorPrimaryDark"
             android:layout_marginTop="@dimen/margin20"
-            android:background="@color/colorPrimary"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Level"
+            android:text="LEVEL"
             android:paddingLeft="@dimen/padding50"
             android:paddingRight="@dimen/padding20"
             android:paddingTop="@dimen/padding10"
             android:paddingBottom="@dimen/padding10"
-            android:textSize="20sp"
+            android:textSize="25sp"
             android:textStyle="bold"
-            android:textColor="@color/white_smoke"/>
+            android:textColor="@color/white"/>
 
     </LinearLayout>
 
