--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,6 +13,7 @@
     <color name="black">#000000</color>
     <color name="white">#FFFFFF</color>
     <color name="black_less_opacity">#70000000</color>
+    <color name="black_95_opacity">#95000000</color>
     <color name="semi_transparent">#800000</color>
     <color name="dark_orange">#FF8C00</color>
     <color name="accentColor">#0C7BC1</color>
@@ -79,4 +80,6 @@
     <color name="light_green">#00ff7f</color>
     <color name="corn_flower_blue">#6495ED</color>
     <color name="dim_gray">#696969</color>
+    <color name="white_70_opacity">#70FFFFFF</color>
+    <color name="black_50_opacity">#50151515</color>
 </resources>
