--- a/app/src/main/res/layout/activity_launch.xml
+++ b/app/src/main/res/layout/activity_launch.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:ads="http://schemas.android.com/apk/res-auto"
-    android:background="@color/black"
+    android:background="@color/green_2"
     tools:context="com.dhisat.naveen.airtennisgame.LaunchActivity">
 
     <LinearLayout
